pwt-macros/tests/builder/wrong_macro.stderr
error: expected default literal
  --> tests/builder/wrong_macro.rs:12:55
   |
12 |     #[builder(IntoEventCallback, into_event_callback, i32)]
   |                                                       ^^^
